--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -700,7 +700,7 @@ mtext("Density",side=2,line=3, cex=1.2)
 
 ###### Run this model on the actual data
 
-Run the code below to determine whether there were differences between the before and after conditions in their proportion of time spent at locations when food was present.
+Run the code below to determine whether there were differences between the before and after conditions in their proportion of time spent at locations when food was present. A contrast will be run to determine whether there is a difference between the conditions: if all values of the confidence interval are on one side of zero, then there was a difference; if the confidence interval crosses zero, then there was no difference.
 
 ```{r gtgrq1model, eval=F}
 library(rethinking)
@@ -1095,7 +1095,7 @@ Number of different habitats per individual ~ Condition + (Condition | ID)
 
 y ~ $\alpha$[ind] + $\beta$[ind]*before
 
-y is the response variable: the total number of different habitats used per individual. There will be one intercept, $\alpha$, and one slope $\beta$ per individual, which will be estimated for the two conditions, before (and after) the manipulation. ID is nested within time as a random effect because there is more than one data point per individual: each individual has a data point in the before condition and in the after condition. A normal distribution was used because the response variable is a sum without an expected skew to the curve [see Figure 10.6 in @mcelreath2020statistical]. The Bayesian model was developed using @mcelreath2020statistical as a guide.
+y is the response variable: the total number of different habitats used per individual. There will be one intercept, $\alpha$, and one slope $\beta$ per individual, which will be estimated for the two conditions, before (and after) the manipulation. ID is nested within condition as a random effect because there is more than one data point per individual: each individual has a data point in the before condition and in the after condition. A normal distribution was used because the response variable is a sum without an expected skew to the curve [see Figure 10.6 in @mcelreath2020statistical]. The Bayesian model was developed using @mcelreath2020statistical as a guide.
 
 ###### Power analysis
 
@@ -1243,9 +1243,6 @@ post <- extract.samples(sj)
 
 #write.csv(simresults,file="simresultsjaysd2.csv") #put the outputs into a csv file so don't have to run the model again...it takes hours
 #write.csv(simresults,file="simresultsjaysd1.csv")
-
-## Prep a figure to show how sample size and mean change number makes a difference in the results. Get posterior values for particular sample sizes and change numbers. Set samplesize (20 or 60), changenumbervariants (0.1 or 0.025), and number_before (always 0.6) to just one number and run the model. Generate the output, write to csv. Repeat for other model variants
-#write.csv(diff_b,file="diff_p20changenumber2.csv")
 ```
 
 ```{r jayq3simulationfiguresamplesize, eval=T, messages=F}
@@ -1465,7 +1462,7 @@ par(op)
 
 ###### Run this model on the actual data
 
-Run the code below to determine whether there were differences between the before and after conditions in their proportion of time spent at locations when food was present.
+Run the code below to determine whether there were differences between the before and after conditions in their proportion of time spent at locations when food was present. If the beta confidence interval is on one side of zero, then there was a difference between the before and after conditions. If the beta confidence interval crosses zero, then there was no difference between before and after.
 
 ```{r jayhabitatuse, eval=F}
 library(rethinking)
@@ -1531,39 +1528,38 @@ mj <- ulam(
         Rho ~ lkj_corr(2)
     ) , data=dat , chains=4 , cores=4 , log_lik=TRUE , cmdstan = TRUE)
 
-#model output: pay attention to beta to determine whether there is a difference between the before and after conditions (there is a difference if CI on one side of zero)
-precis(mj,depth=2)
+#precis(mj,depth=2) #pay attention to beta to determine whether there is a difference between the before and after conditions (there is a difference if CI on one side of zero)
 #boxplot(dat$habitatuse~dat$before) #see if there is a difference visually
-
-#run a CONTRAST to determine whether there is a difference between before (g1) and after (g2). Yes if all values on one side of zero
-post <- extract.samples(mj)
-diff_g <- post$g[,1] - post$g[,2] #log-odds difference p.341
-diff_p <- inv_logit(post$g[,1]) - inv_logit(post$g[,2]) #on the probability scale p.341
-precis( list( diff_g=diff_g , diff_p=diff_p ) )
 ```
 
 
-##### J.Q4 Foraging
+##### J.Q4 More flexible = more food types?
 
 ###### The model
 
-Number of different food types eaten per individual ~ Habitat * Time + (Time | ID)
+The model as it would appear in a generalized linear mixed model format:
 
-Habitat is either a human modified or a natural site, and time is before or after the flexibility manipulation. ID is nested within time as a random effect because there is more than one data point per individual: each individual has a data point at time 1 and time 2.
+Number of different food types taken per individual ~ Condition + (Condition | ID)
+
+*Bayesian model with a normal distribution:*
+
+y ~ $\alpha$[ind] + $\beta$[ind]*before
+
+y is the response variable: the total number of different food types taken per individual. There will be one intercept, $\alpha$, and one slope $\beta$ per individual, which will be estimated for the two conditions, before (and after) the manipulation. ID is nested within condition as a random effect because there is more than one data point per individual: each individual has a data point in the before condition and in the after condition. A normal distribution was used because the response variable is a sum without an expected skew to the curve [see Figure 10.6 in @mcelreath2020statistical]. The Bayesian model was developed using @mcelreath2020statistical as a guide.
 
 ###### Power analysis
 
-We estimated our power to detect differences between conditions at different sample sizes and with different mean changes in the total number of different microhabitats used per individual in the before vs. after conditions (Figure 4). We simulated the number of habitats used for different sample sizes of individuals before and after the flexibility manipulation. We analyzed these simulated data with the model we will use to analyze the actual data, estimating the change in the number of habitats used between the before and after conditions. From the posterior estimates of the model, we extracted both the mean change as well as the ratio of the posterior estimates that were below zero.
+We estimated our power to detect differences between conditions at different sample sizes and with different mean changes in the total number of different food types taken per individual in the before vs. after conditions (Figure 4). We simulated the number of food types taken for different sample sizes of individuals before and after the flexibility manipulation. We analyzed these simulated data with the model we will use to analyze the actual data, estimating the change in the number of food types taken between the before and after conditions. From the posterior estimates of the model, we extracted both the mean change as well as the ratio of the posterior estimates that were below zero.
 
-If the mean ratio of estimates below zero is close to 0.5, the model assumes that the change in the number of habitats used before the flexibility manipulation is similar to after. If the ratio is close to zero, the model assumes individuals have changed their behavior. For changes in the number of habitats used smaller than 2, models are likely to assume that no changes occurred even with large sample sizes. If the change in the number of habitats used before the flexibility manipulation vs. after is 2 with a standard deviation of 2, on average 91% of the posterior of the model based on a sample size of 20 individuals will be larger than zero. This means that the model is quite certain there is a difference that is larger than zero. In addition, only 6 of the 30 models for a sample size of 20 at the mean change of 2 have a ratio larger than 0.3, meaning that the risk of having a false negative is not very likely.
+If the mean ratio of estimates below zero is close to 0.5, the model assumes that the change in the number of food types taken before the flexibility manipulation is similar to after. If the ratio is close to zero, the model assumes individuals have changed their behavior. For changes in the number of food types taken smaller than 2, models are likely to assume that no changes occurred even with large sample sizes. If the change in the number of food types taken before the flexibility manipulation vs. after is 2 with a standard deviation of 2, on average 91% of the posterior of the model based on a sample size of 20 individuals will be larger than zero. This means that the model is quite certain there is a difference that is larger than zero. In addition, only 6 of the 30 models for a sample size of 20 at the mean change of 2 have a ratio larger than 0.3, meaning that the risk of having a false negative is not very likely.
 
-In general, with sample sizes at or above 20 and mean changes in the number of habitats used at 2 or larger, it is likely that the model will indicate that individuals have changed their behavior. Mean changes below 2 can still be detected, however there is a much higher risk that there will be a false negative and this risk is independent of sample size. For example, 60% of the models for a sample size of 20 at the mean change of 1 have a ratio larger than 0.3, meaning there is a risk of having a false negative.
+In general, with sample sizes at or above 20 and mean changes in the number of food types taken at 2 or larger, it is likely that the model will indicate that individuals have changed their behavior. Mean changes below 2 can still be detected, however there is a much higher risk that there will be a false negative and this risk is independent of sample size. For example, 60% of the models for a sample size of 20 at the mean change of 1 have a ratio larger than 0.3, meaning there is a risk of having a false negative.
 
 With small mean changes in the response variable, some individuals might not increase or even decrease their response after the manipulation because there is variation around the mean change in individual responses. With small sample sizes, there is a risk that only individuals who did not clearly increase their response will be studied, whereas larger sample sizes are more likely to include a wider spectrum of individuals.
 
-To estimate the risk of detecting false positives, we set the mean change in the number of habitats used to zero so there was no change between the before and after conditions. As expected, the average ratio of estimates below zero is close to 0.5 and independent of sample size. With a sample size of 20, 43% have a ratio smaller than 0.3, meaning that the risk of having a false positive is high. The risk would be lower if the variation among individuals was lower than what we assumed (the standard deviation of the mean change in number of habitats was 2, which is a conservative estimate).
+To estimate the risk of detecting false positives, we set the mean change in the number of food types taken to zero so there was no change between the before and after conditions. As expected, the average ratio of estimates below zero is close to 0.5 and independent of sample size. With a sample size of 20, 43% have a ratio smaller than 0.3, meaning that the risk of having a false positive is high. The risk would be lower if the variation among individuals was lower than what we assumed (the standard deviation of the mean change in number of foods was 2, which is a conservative estimate).
 
-```{r jayhabitatusesim, eval=F}
+```{r jayforagingsim, eval=F}
 library(rethinking)
 library(cmdstanr)
 set_ulam_cmdstan(TRUE) #makes it so ulam always runs with cmdstan
@@ -1572,28 +1568,28 @@ rstan_options(auto_write = TRUE)
 ### SIMULATE the population (p.441 for normal distribution - McElreath 2020)
 N_ind <- 20 #number of individuals tested
 
-#choose the mean number of habitats used and standard deviations - visualize to see whether it would be possible to tell the difference between before (black) and after (red)
-number_before<-4.5 #number of habitats used per bird in the before condition
-changenumber<-1.5 #the difference in the number habitats used between the before and after conditions
-plot(density(rnorm(10000,number_before,sd=1.5)),lwd=2,xlim=c(0,18),ylim=c(0,0.3)) #A sample size of 10k individuals. An SD of 2 (when the mean before is 5) encompasses all of the range of numbers of habitats we expect to find (0-10) so it would be the largest SD we would expect and thus the most conservative sd to use in the simulations
-lines(density(rnorm(10000,number_before*(changenumber*1),sd=1.5)),lwd=2,col="red") #the after condition. Should be able to tell the difference when changenumber is at least 1.5 and the SD is at least 1.5 (and number_before is 5)
+#choose the mean number of food types taken and standard deviations - visualize to see whether it would be possible to tell the difference between before (black) and after (red)
+number_before<-6.5 #number of foods per bird in the before condition
+changenumber<-1.3 #the difference in the number foods between the before and after conditions
+plot(density(rnorm(10000,number_before,sd=2)),lwd=2,xlim=c(0,18),ylim=c(0,0.3)) #A sample size of 10k individuals. An SD of 1.3 (when the mean before is 6.5) encompasses all of the range of numbers of foods we expect to find (0-13) so it would be the largest SD we would expect and thus the most conservative sd to use in the simulations
+lines(density(rnorm(10000,number_before*(changenumber*1),sd=2)),lwd=2,col="red") #the after condition. Should be able to tell the difference when changenumber is at least 1.3 and the SD is at least 2 (and number_before is 6.5)
 
 #before
-numberbefore <- round(rnorm(N_ind,mean=4.5,sd=1.5),2) #number of habitats used, 2 means 2 decimal points
-numberbefore[numberbefore<1]<-1 #this needs to be a minimum of 1 bc an individual can never live in less than 1 habitat
-changenumber <- rnorm(N_ind, mean=(10-numberbefore)-3.5,sd=1.5) #if had a large number before, have a smaller change relative to the after condition. Subtract 3.5 to have a change of 2 habitats (10-4.5=5.5-3.5=2)
+numberbefore <- round(rnorm(N_ind,mean=6.5,sd=1),2) #number of foods taken, 2 means 2 decimal points
+numberbefore[numberbefore<1]<-0 #this needs to be a minimum of 0 bc an individual can never take negative food
+changenumber <- rnorm(N_ind, mean=(13-numberbefore)-4.5,sd=2) #if had a large number before, have a smaller change relative to the after condition. Subtract 4.5 to have a change of 2 food types (13-6.5 = 6.5-4.5 = 2)
 
 #after
-numberafter <- round(numberbefore+rnorm(N_ind,mean=changenumber,sd=2),2)
-numberafter[numberafter<1]<-1 #this needs to be a minimum of 1 bc an individual can never live in less than 1 habitat
+numberafter <- round(numberbefore+rnorm(N_ind,mean=changenumber,sd=1),2)
+numberafter[numberafter<1]<-0
 
-#change the number of habitats increased (e.g., 3.5) in changenumber and the sd in numberafter to determine which sds to run the simulations at. Visualize using the plot below to see when the distributions have more separation. It looks like with a difference of 2 habitats (3.5 in changenumber), which is probably the minimum we could detect differences with, the maximum numberafter sd would be 2 and an sd with larger detectable differences is 1. Run the simulation with an sd of 1 and 2 to explore the boundaries
-plot(density(numberbefore),lwd=2,xlim=c(0,18),ylim=c(0,0.3)) #A sample size of 10k individuals. An SD of 2 (when the mean before is 5) encompasses all of the range of numbers of habitats we expect to find (0-10) so it would be the largest SD we would expect and thus the most conservative sd to use in the simulations
-lines(density(numberafter),lwd=2,col="red") #the after condition. Should be able to tell the difference when changenumber is at least 1.5 and the SD is at least 1.5 (and number_before is 5)
+#change the number of foods increased (e.g., 4.5) in changenumber and the sd in numberafter to determine which sds to run the simulations at. Visualize using the plot below to see when the distributions have more separation. It looks like with a difference of 2 foods (4.5 in changenumber), which is probably the minimum we could detect differences with, the maximum numberafter sd would be 2 and an sd with larger detectable differences is 1. Run the simulation with an sd of 1 and 2 to explore the boundaries
+plot(density(numberbefore),lwd=2,xlim=c(0,18),ylim=c(0,0.3)) #A sample size of 10k individuals. An SD of 2 (when the mean before is 6.5) encompasses all of the range of numbers of foods we expect to find (0-13) so it would be the largest SD we would expect and thus the most conservative sd to use in the simulations
+lines(density(numberafter),lwd=2,col="red") #the after condition. Should be able to tell the difference when changenumber is at least 2 and the SD is at least 2 (and number_before is 6.5)
 
-#check the plot to see whether individuals are increasing their numbers = one point is below the 1:1 line
-#plot(numberbefore,numberafter)
-#abline(0,1)
+#check the plot to see whether individuals are increasing their numbers = several points are below the 1:1 line
+plot(numberbefore,numberafter)
+abline(0,1)
 
 
 ### POWER ANALYSIS: different sample sizes and different mean changes in proportions between before and after conditions
@@ -1660,21 +1656,22 @@ for (samplesize in 1:length(samplesizes)) {
 
         # Our MODEL, which will estimate a different mean and variance of phi for each site 
         # note: had to add force_recompile bc kept giving me an error and wouldn't finish running. See https://github.com/rmcelreath/rethinking/issues/338
-sj <- ulam(
+sjf <- ulam(
     alist(
-        habitatuse ~ normal( mu , sigma ),
+        foods ~ normal( mu , sigma ),
         mu <- a_ind[ind] + b_ind[ind]*before,
         c(a_ind,b_ind)[ind] ~ multi_normal( c(alpha,beta) , Rho , sigma_ind ),
-        alpha ~ normal(0,2), #0=standardized mean number of habitats used, 2=habitats for the sd
-        beta ~ normal(0,4), #0=mean slope, 4=sd which is like the max difference between before and after
+        alpha ~ normal(6.5,2), #6.5=mean number of foods taken, 2=food types for the sd
+        beta ~ normal(0,6), #0.5=mean slope, 6=sd which is like the max difference between before and after
         sigma_ind ~ exponential(1),
         sigma ~ exponential(1),
         Rho ~ lkj_corr(2)
     ) , data=dat , chains=4 , cores=4 , log_lik=TRUE , cmdstan = TRUE, control = list(adapt_delta = .95, force_recompile = TRUE))
-#precis(sj, depth=2) #check the output to make sure it looks as expected
+
+precis(sjf, depth=2) #check the output to make sure it looks as expected
 
        #run a CONTRAST to determine whether there is a difference between before (g1) and after (g2) (subtract g1 before from g2 after). Yes if all values for diff_p on one side of zero (want probability scale because that is the scale we used in the simulation)
-post <- extract.samples(sj)
+post <- extract.samples(sjf)
 #str(post) #check it
 #diff_b <- post$b_ind[,2] - post$b_ind[,1] #log-odds difference p.341 McElreath 2020. Don't need to do the contrast because we already have each individual's number so we only need to look at their beta to see whether it is positive (more habitats after) or negative (fewere habitats after)
 #PI(diff_b) #did the difference cross zero?
@@ -1695,14 +1692,11 @@ post <- extract.samples(sj)
         }
 }
 
-#write.csv(simresults,file="simresultsjaysd2.csv") #put the outputs into a csv file so don't have to run the model again...it takes hours
-#write.csv(simresults,file="simresultsjaysd1.csv")
-
-## Prep a figure to show how sample size and mean change number makes a difference in the results. Get posterior values for particular sample sizes and change numbers. Set samplesize (20 or 60), changenumbervariants (0.1 or 0.025), and number_before (always 0.6) to just one number and run the model. Generate the output, write to csv. Repeat for other model variants
-#write.csv(diff_b,file="diff_p20changenumber2.csv")
+#write.csv(simresults,file="simresultsjayforagingsd2.csv") #put the outputs into a csv file so don't have to run the model again...it takes hours
+#write.csv(simresults,file="simresultsjaysforagingd1.csv")
 ```
 
-```{r jayq3simulationfiguresamplesize, eval=T, messages=F}
+```{r jayq4simulationfiguresamplesize, eval=T, messages=F}
 library(rethinking)
 library(cmdstanr)
 set_ulam_cmdstan(TRUE) #makes it so ulam always runs with cmdstan
@@ -1914,56 +1908,28 @@ par(op)
 #length(d1[d1$n %in% 20 & d1$changenumber_mean %in% 2,]$proportion_estimates_below_zero) #30 values total
 ```
 
-**Figure 5.** Curves of the mean ratio of estimates below zero (vertical lines show the minimum and maximum ratios), which illustrates the power we have to detect differences between conditions at different sample sizes. Across all models, the standard deviation of the mean change in number of habitats used was 2 (A) or 1 (B) and the number of habitats used before the flexibility manipulation was 4.5.
+**Figure 5.** Curves of the mean ratio of estimates below zero (vertical lines show the minimum and maximum ratios), which illustrates the power we have to detect differences between conditions at different sample sizes. Across all models, the standard deviation of the mean change in number of food types taken was 2 (A) or 1 (B), and the number of food types taken before the flexibility manipulation was 6.5.
 
 
 ###### Run this model on the actual data
 
-Run the code below to determine whether there were differences between the before and after conditions in their proportion of time spent at locations when food was present.
+Run the code below to determine whether there were differences between the before and after conditions in the number of food types taken. If the beta confidence interval is on one side of zero, then there was a difference between the before and after conditions. If the beta confidence interval crosses zero, then there was no difference between before and after.
 
-```{r jayhabitatuse, eval=F}
+```{r jayforaging, eval=F}
 library(rethinking)
 library(cmdstanr)
 set_ulam_cmdstan(TRUE) #makes it so ulam always runs with cmdstan
                                                                                                                                   ## when the data do not yet exist, use simulated data to test the model
 N_ind <- 20
 
-#standardize the data to make suburban (max 10 microhabitats) directly comparable with natural (max 8 microhabitats)
-suburban_before<-rnorm(20,mean=5,sd=1)
-suburban_after<-suburban_before+rnorm(20,mean=2,sd=1)
-natural_before<-rnorm(20,mean=4,sd=1)
-natural_after<-natural_before+rnorm(20,mean=2,sd=1)
-plot(density(suburban_before),xlim=c(0,10))
-lines(density(suburban_after),col="grey")
-lines(density(natural_before),col="darkred")
-lines(density(natural_after),col="red")
-
-#combine before and after data per habitat
-suburban<-c(suburban_before,suburban_after)
-natural<-c(natural_before,natural_after)
-
-plot(density(suburban))
-lines(density(natural),col="red")
-
-#the standardization worked: both curves almost exactly overlap (note the hump to the right which is the after data)
-standardized_suburban<-standardize(suburban)
-standardized_natural<-standardize(natural)
-
-plot(density(standardized_suburban))
-lines(density(standardized_natural),col="red")
-
 dat <- list(
-    habitatuse = standardize(rnorm(40,mean=4.5,sd=2)), #estimate 20 total individuals (*2 conditions) with a mean of 4.5 habitats/individual (halfway between the max 10 suburban and 8 natural habitats)
+    foods = standardize(rnorm(40,mean=4.5,sd=2)), #estimate 20 total individuals (*2 conditions) with a mean of 6.5 foods/individual (halfway between the max 13 possible food types)
     before = c(rep(1,N_ind),rep(2,N_ind)), #1 refers to before and 2 to after
     ind = rep(1:N_ind,2) #go through all individuals twice because there are observations from before and after for each
 )
 
 ## load data sheet
 d <- read.csv(url(""), header=T, sep=",", stringsAsFactors=F)
-
-# replace all values with standardized values for each habitat (suburban and natural)
-d[d$Habitat=="Suburban",]$habitats<-standardize(d[d$Habitat=="Suburban",]$habitats)
-d[d$Habitat=="Natural",]$habitats<-standardize(d[d$Habitat=="Natural",]$habitats)
 
 # Set up the data sheet
 dat <- list(
@@ -1973,27 +1939,20 @@ dat <- list(
 )
 
 # THE MODEL (p.441 for normal distribution - McElreath 2020). Note that it is MULTIPLIED by condition (before), which means that you don't need to run a contrast because each individual value already accounts for the difference. So only look at beta to see if it is above zero or not for each individual or summed across individuals
-mj <- ulam(
+mjf <- ulam(
     alist(
-        habitatuse ~ normal( mu , sigma ),
+        foods ~ normal( mu , sigma ),
         mu <- a_ind[ind] + b_ind[ind]*before,
         c(a_ind,b_ind)[ind] ~ multi_normal( c(alpha,beta) , Rho , sigma_ind ),
-        alpha ~ normal(4.5,2), #4.5=mean number of habitats used, 2=habitats for the sd
-        beta ~ normal(0,4), #0=mean slope, 4=sd which is like the max difference between before and after
+        alpha ~ normal(6.5,2), #6.5=mean number of foods taken, 2=food types for the sd
+        beta ~ normal(0,6), #0.5=mean slope, 6=sd which is like the max difference between before and after
         sigma_ind ~ exponential(1),
         sigma ~ exponential(1),
         Rho ~ lkj_corr(2)
     ) , data=dat , chains=4 , cores=4 , log_lik=TRUE , cmdstan = TRUE)
 
-#model output: pay attention to beta to determine whether there is a difference between the before and after conditions (there is a difference if CI on one side of zero)
-precis(mj,depth=2)
-#boxplot(dat$habitatuse~dat$before) #see if there is a difference visually
-
-#run a CONTRAST to determine whether there is a difference between before (g1) and after (g2). Yes if all values on one side of zero
-post <- extract.samples(mj)
-diff_g <- post$g[,1] - post$g[,2] #log-odds difference p.341
-diff_p <- inv_logit(post$g[,1]) - inv_logit(post$g[,2]) #on the probability scale p.341
-precis( list( diff_g=diff_g , diff_p=diff_p ) )
+#precis(mjf,depth=2) #model output: if the beta confidence interval are on one side of zero, then there was a difference between the before and after conditions. If the beta confidence interval crosses zero, then there was no difference between before and after.
+#boxplot(dat$foods~dat$before) #see if there is a difference visually
 ```
 
 
